Name:                yesod-recaptcha
Version:             1.4
Synopsis:            Dead simple support for reCAPTCHA on Yesod applications.
Homepage:            https://github.com/prowdsponsor/yesod-recaptcha
License:             BSD3
License-file:        LICENSE
Author:              Felipe Lessa
Maintainer:          felipe.lessa@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8
-- Copyright:
-- Extra-source-files:

Description:
  This package provides support for reCAPTCHA
  (<http://www.google.com/recaptcha>) on Yesod applications.

Source-repository head
  type:     git
  location: git://github.com/prowdsponsor/yesod-recaptcha.git

Library
  Hs-source-dirs: src
  GHC-options: -Wall
  Exposed-modules: Yesod.ReCAPTCHA
  Extensions: DeriveDataTypeable FlexibleContexts TemplateHaskell
              QuasiQuotes OverloadedStrings
  Build-depends:
      base           == 4.*
    , bytestring
    , text
    , data-default
    , yesod-core     >= 1.6 && < 1.7
    , yesod-auth     >= 1.6 && < 1.7
    , yesod-form     >= 1.6 && < 1.7
    , wai
    , network
    , network-info   == 0.2.*
    , http-conduit   >= 2.3 && < 2.4
    , http-types
    , resourcet
    , unliftio >= 0.2.7.0 && < 0.3
